# Verityn-AI

./: .gitignore  AI_RESPONSE_FORMATTING_IMPROVEMENTS.md  BOOTCAMP_REFERENCE.md  CHALLENGE_RESPONSES.md  CODEBASE_ANALYSIS.md  Cert_Challenge_Responses.md  DEPLOYMENT_GUIDE.md  PHASE_2_COMPLETION_SUMMARY.md  PROJECT_PLAN.md  RAGAS_ENHANCED_COMPLETION_SUMMARY.md  README.md  SUBTASK_4_4_COMPLETION_SUMMARY.md  SUBTASK_4_5_COMPLETION_SUMMARY.md  SUBTASK_5_1_COMPLETION_SUMMARY.md  SUBTASK_5_3_COMPLETION_SUMMARY.md  SYNTHETIC_DATA_STRATEGY.md  SYSTEM_ARCHITECTURE_FLOWCHART.md  TASK_3_COMPLETION_SUMMARY.md  VIDEO_SCRIPT.md  accurate_ragas_metrics_report.json  create_clean_mermaid_flowchart.py  create_flowchart.py  create_mermaid_flowchart.py  create_simple_flowchart.py  debug_chat_context.py  debug_full_chat.py  debug_upload_flow.py  debug_vector_db.py  env.example  pyproject.toml  requirements.txt  setup.py  task_7_simplified_assessment_report.json  test_advanced_retrieval_simple.py  test_enhanced_response_agent.py  test_enhanced_workflow.py  test_env_loading.py  test_fix_verification.py  test_real_document_performance.py  test_real_performance.py  (+12 more)
.cursor/rules/: backend-rule.mdc  bootcamp-rule.mdc  frontend-rule.mdc  general-rule.mdc  readme-rule.mdc  security-compliance.mdc  testing-rules.mdc  verityn-project-rules.mdc
backend/: __init__.py  main.py
backend/agents/: __init__.py
backend/app/: __init__.py  config.py
backend/app/agents/: base_agent.py  specialized_agents.py
backend/app/models/: chat.py
backend/app/routes/: __init__.py  chat.py  documents.py  health.py  web_search.py  workflow.py
backend/app/services/: __init__.py  advanced_retrieval.py  chat_engine.py  classification_engine.py  document_processor.py  langsmith_service.py  question_suggestions.py  ragas_evaluation.py  tavily_service.py  vector_database.py
backend/app/workflows/: multi_agent_workflow.py
backend/models/: __init__.py  schemas.py
backend/workflows/: __init__.py
data/: README.md
data/enhanced_qa_datasets/: enhanced_qa_dataset.json
data/enhanced_synthetic_documents/: enhanced_generation_summary.json  ragas_gap_analysis.json
data/qa_datasets/: complete_qa_dataset.json
data/sox_test_documents/: sox_access_review_2024.txt  sox_financial_controls_2024.txt  sox_internal_controls_2024.txt  sox_risk_assessment_2024.txt
data/sox_test_documents/json/: sox_access_review_2024.json  sox_financial_controls_2024.json  sox_internal_controls_2024.json  sox_risk_assessment_2024.json
data/synthetic_documents/: generation_summary.json
data/synthetic_documents/csv/: amazon_access_review_20250804_findings_summary.csv  amazon_access_review_20250804_user_access_table.csv  amazon_financial_reconciliation_20250804_outstanding_items.csv  amazon_financial_reconciliation_20250804_reconciling_items_detail.csv  amazon_risk_assessment_20250804_control_matrix.csv  (+13 more)
data/test_output/: synthetic_generation_test.json
docs/: PRESENTATION_README.md  README.md  convert.sh  convert_to_pdf.md  demo_slides_placeholder.html  style.css  verityn_ai_presentation.html  verityn_ai_presentation.md
figma_code/: README.md  index.html  package.json  vite.config.ts
figma_code/src/: App.tsx  index.css
frontend/: .env.local  .env.production.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
scripts/: README.md  content_generator.py  create_sox_documents.py  create_test_document.py  document_creator.py  enhanced_qa_generator.py  get_accurate_ragas_metrics.py  qa_generator.py  ragas_enhanced_generator.py  synthetic_data_generation.py  task_7_performance_assessment.py  task_7_simplified_assessment.py  test_advanced_retrieval.py  test_advanced_retrieval_fixed.py  test_advanced_retrieval_simple.py  test_chunk_examination.py  test_comprehensive_chat_quality.py  test_document_processing.py  test_document_processing_validation.py  test_end_to_end_multi_agent.py  test_infrastructure_fixes.py  test_langsmith_integration.py  test_multi_agent_workflow.py  test_rag_chat_engine.py  test_ragas_evaluation.py  test_reduced_dataset_ingestion.py  test_synthetic_generation.py  test_vector_database.py
scripts/synthetic_data/: README.md  content_generator.py  create_sox_documents.py  create_test_document.py  document_creator.py  enhanced_qa_generator.py  qa_generator.py  ragas_enhanced_generator.py  synthetic_data_generation.py
scripts/testing/: README.md  test_production_pipeline.py
tests/: README.md
(+33 files in other folders)
